# brochure_generator

./: .gitignore  README.md  brochure_generator.ipynb  brochure_generator.py  llmclient.py  main_cli.py  main_ui.py  pyproject.toml  website.py
